package com.mahmoudhamdyae.dailyforecast.util

object TestTags {

    const val LOADING = "LOADING"
    const val WEATHER_CARD = "WEATHER_CARD"
    const val NOT_ACCURATE_DATA = "NOT_ACCURATE_DATA"
}